# mass-delivery

./: CMakeLists.txt  README.md
md/: deliveryform.cpp  deliveryform.h  deliveryform.ui  massdelivery.cpp  massdelivery.h  massdelivery.pro  massdelivery_plugin.cpp  massdelivery_plugin.h
src/: deliveryform.cpp  deliveryform.h  deliveryform.ui  huggle-md.json  massdelivery.cpp  massdelivery.h  massdelivery.pro
